<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/cameraBGRButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="54dp"
            android:text="@string/cameraBGRButton" />

        <Button
            android:id="@+id/cameraGButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="54dp"
            android:text="@string/cameraGButton" />

        <Button
            android:id="@+id/cameraRGBButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:text="@string/cameraRGBButton" />

        <Button
            android:id="@+id/cameraCanny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="120dp"
            android:text="@string/cameraCanny" />

        <Button
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="190dp"
            android:text="@string/camera" />

        <Button
            android:id="@+id/cameraBlur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="190dp"
            android:text="@string/cameraBlur" />
        <Button
            android:id="@+id/cameraHSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="260dp"
            android:text="@string/cameraHSV" />
        <Button
            android:id="@+id/cameraLUV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="260dp"
            android:text="@string/cameraLUV" />
        <Button
            android:id="@+id/cameraYUV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="320dp"
            android:text="@string/cameraYUV" />
        <Button
            android:id="@+id/cameraLAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="320dp"
            android:text="@string/cameraLAB" />
        <Button
            android:id="@+id/cameraCanny2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="370dp"
            android:text="@string/cameraCanny2" />
        <Button
            android:id="@+id/cameraXYZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="370dp"
            android:text="@string/cameraXYZ" />
        <Button
            android:id="@+id/cameraFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="420dp"
            android:text="@string/FaceDetection" />
        <Button
            android:id="@+id/cameraGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="420dp"
            android:text="@string/CameraGL" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>